[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypromise"
version = "0.0.1"
requires-python = ">= 3.9"
authors = [
  {name = "Jintumoni Kalita", email = "jintu.kvs@gmail.com"}
]
readme = "README.md"
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3.9",
]